# VST3-haiku

./: .clang-format  .gitignore  CMakeLists.txt  HAIKUGUI.txt  LICENSE  Makefile  README.md  build-from-source.sh
haiku/: haikuplugview.h
hosts/vst3jackhost/: CMakeLists.txt
hosts/vst3jackhost/source/: editorwindow.cpp  editorwindow.h  inamfileloader.h  main.cpp
packaging/: make-hpkg.sh  vst3_haiku-0.1.0.recipe  vst3_haiku.PackageInfo
vst3sdk/: doc-README.txt
vst3sdk/base/source/: fdebug.cpp  fstring.cpp  timer.cpp  timer.h
vst3sdk/cmake/modules/: SMTG_AddSMTGLibrary.cmake  SMTG_DetectPlatform.cmake  SMTG_PlatformToolset.cmake  SMTG_SetupVST3LibraryDefaultPath.cmake
vst3sdk/pluginterfaces/base/: falignpop.h  falignpush.h  fplatform.h  fstrdefs.h  ftypes.h  funknown.cpp  typesizecheck.h  ustring.cpp
vst3sdk/pluginterfaces/gui/: iplugview.h
vst3sdk/public.sdk/samples/vst-hosting/audiohost/: CMakeLists.txt
vst3sdk/public.sdk/samples/vst-hosting/audiohost/source/media/: audioclient.cpp  audioclient.h
vst3sdk/public.sdk/samples/vst-hosting/editorhost/: CMakeLists.txt
vst3sdk/public.sdk/samples/vst-hosting/validator/: CMakeLists.txt
vst3sdk/public.sdk/samples/vst-utilities/moduleinfotool/: CMakeLists.txt
vst3sdk/public.sdk/source/common/: commoniids.cpp  openurl.cpp  threadchecker_linux.cpp
vst3sdk/public.sdk/source/main/: moduleinit.h  pluginfactory.cpp
vst3sdk/public.sdk/source/vst/hosting/: module_haiku.cpp
vst3sdk/public.sdk/source/vst/utility/: systemtime.cpp
